# MISO4204-Desarrollo_Nube

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.web  Dockerfile.worker  GUIA_PRUEBAS_ENTREGA3.md  Makefile  README.md  docker-compose.fargate.yml  docker-compose.yml  nginx.conf  nginx.fargate.conf  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  ci.yml
app/: __init__.py  main.py
app/core/: config.py  security.py  storage.py
app/db/: __init__.py  base.py  database.py  models.py
app/schemas/: auth.py  base.py  task.py  video.py  vote.py
app/services/: queue.py
app/worker/: __init__.py  celery_app.py  sqs_worker.py  tasks.py  videos.py
capacity-planning/: pruebas_de_carga_entrega2.md  pruebas_de_carga_entrega3.md  pruebas_de_carga_entrega4.md
capacity-planning/results-entrega3/: escenario1_summary.json
capacity-planning/results-entrega4/: escenario1_summary.json
capacity-planning/scripts-entrega3/: README.md  generar_graficas_escenario2.py  graficas_escenario1.py  setup_crear_usuarios_prueba.sh  test_escenario1_capa_web.js  test_escenario2_upload_videos.js
capacity-planning/scripts-entrega4/: graficas_escenario1.py  graficas_escenario2.py  setup_crear_usuarios_prueba.sh  test_escenario1_capa_web.js  upload_videos_python.py
capacity-planning/scripts-entrega5/: setup_crear_usuarios_prueba.sh  test_escenario1_web.js  (+2 more)
collections/: README.md  README_ENTREGA4.md  postman_collection.json  postman_environment.json
pages/: Carga Alta.html
pruebas_carga/: Carga Baja.html  Carga Media.html  reporte.md
scripts/: __init__.py  deploy_fargate_local.sh  init_localstack.sh  load_data.py  test_fargate_deployment.sh
tests/: conftest.py
(+56 files in other folders)
